tests/NormalTests/paczka1/fuzzy1/24561718.err
Error in line 12: EP0IX A698 -2,6
Error in line 7: EP0IX A698 45,6
Error in line 15: V424n A925 77,6
Error in line 34: E2B A531 -1,6
Error in line 35: V424n A925 15,93
Error in line 36: V424n A925 63,0
Error in line 28: EP0IX S568 266,4
